k8s/base/deluge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluge
  labels:
    app: deluge
spec:
  selector:
    matchLabels:
      app: deluge
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: deluge
        tier: backend
        track: stable
    spec:
      containers:
      - name: deluge
        image: linuxserver/deluge:version-2.0.3-2201906121747ubuntu18.04.1
        volumeMounts:
        - name: deluge-persistent-storage
          mountPath: /config
          subPath: deluge/config
        - name: deluge-persistent-storage
          mountPath: /downloads
          subPath: downloads/
      volumes:
      - name: deluge-persistent-storage
        persistentVolumeClaim:
          claimName: home-server-pvc
