k8s/base/deluge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deluge
  labels:
    app: deluge
spec:
  selector:
    app: deluge
    tier: backend
  ports:
  - protocol: TCP
    port: 8112
